# Freccia_Proyect

./: CMakeLists.txt  CMakeLists.txt.user.7380523  Instrucciones.txt  README.md  build.sh
Cohete/Cohete Paper V2/: Aletas-Fijas.SLDPRT  Aletas-Moviles-Version2.SLDPRT  Aletas-Moviles.SLDPRT  Baterias.SLDPRT  CoheteGUI.SLDASM.SLDPRT  Complemento Aletas-Moviles.SLDPRT  ControlRoll.SLDASM  Cuerpo.SLDPRT  Ensamblaje1.SLDASM  EnsamblajeCohete.SLDASM  EnsamblajeCompletoCoheteYSoporte.SLDASM  EnsamblajeSoporte_PCB_Baterias.SLDASM  Ojiva.SLDPRT  SensorPresion.SLDPRT  SoportePCB.SLDPRT  Tubo Pitot.SLDPRT  servo mount middle.SLDPRT
Cohete/Cohete Paper V2/.step/: Cuerpo.STEP  Ojiva.SLDPRT  Ojiva.STEP
Cohete/Cohete Paper V2/Servoss/: ServoModelo1Completo.SLDASM
Cohete/Cohete Paper V2/Soporte/: Rodamineto.SLDPRT  Soporte.SLDPRT  Varilla.SLDPRT
Cohete/Cohete Paper V2/Thrust Vectoring/: BasePrincipal.SLDPRT  ConectroServoTobera.SLDPRT  ConectroServoTobera2.SLDPRT  CuadradoMovimiento.SLDPRT  EnsamblajeThrust Vectoing.SLDASM  Soporte1Servo.SLDPRT
GUI/: CMakeLists.txt  resources.qrc  simulador_serial.py
GUI/Header_Files/: Graph3DWindow.h  InicioWindow.h  widget.h
GUI/Others/: Instrucciones.txt  simulador_serial.py
GUI/Source_Files/: DataRepository.cpp  Graph3DWindow.cpp  InicioWindow.cpp  MapWidget.cpp  SensorManager.cpp  main.cpp  widget.cpp
GUI/Source_Files/data/: DataCleaner.cpp  FileHelper.cpp
GUI/assets/: map.html
GUI/assets/Others/: CoheteGUI.SLDASM
GUI/data/: gps_log.csv
GUI/src/: DataCleaner.cpp  main.cpp
Header Files/: widget.h
Header_Files/: DataRepository.h  Graph3DWindow.h  MapWidget.h  SensorManager.h  SerialReader.h  widget.h
Header_Files/data/: DataCleaner.h  FileHelper.h  SensorData.h
Others/starship-rocket-2.snapshot.1/: starship rocket.SLDPRT
Source Files/: SensorManager.cpp  main.cpp  widget.cpp
Source Files/data/: DataCleaner.cpp
Source_Files/: Graph3DWindow.cpp  SensorManager.cpp  SerialReader.cpp  main.cpp  widget.cpp
Source_Files/data/: DataCleaner.cpp  FileHelper.cpp
data/: clean_data.csv  clean_gps.csv  errores.csv  errores_gps.csv  sample_data.csv
include/: CSVReader.h  DataCleaner.h  FileHelper.h  GPSCSVReader.h  GPSData.h  SensorData.h
qml/: ChartView.qml  Main.qml  MapView.qml
resources/: resources.qrc
src/: CSVReader.cpp  DataCleaner.cpp  GPSCSVReader.cpp  main.cpp
