cmake_minimum_required(VERSION 3.16)
project(GUI_FRECCIA LANGUAGES CXX)

if(NOT DEFINED INSTALL_EXAMPLESDIR)
    set(INSTALL_EXAMPLESDIR "examples")
endif()

set(INSTALL_EXAMPLEDIR "${INSTALL_EXAMPLESDIR}/charts/GUI_FRECCIA")

find_package(Qt6 REQUIRED COMPONENTS
    Charts
    Core
    Gui
    Widgets
    SerialPort
    DataVisualization
)

qt_standard_project_setup()

qt_add_executable(GUI_FRECCIA
  Source_Files/main.cpp
  Source_Files/widget.cpp
  Source_Files/SensorManager.cpp
  Source_Files/SerialReader.cpp
  Source_Files/Graph3DWindow.cpp

  Source_Files/data/DataCleaner.cpp
  Source_Files/data/FileHelper.cpp

  Header_Files/widget.h
  Header_Files/SensorManager.h
  Header_Files/SerialReader.h
  Header_Files/Graph3DWindow.h

  Header_Files/data/DataCleaner.h
  Header_Files/data/FileHelper.h
  Header_Files/data/SensorData.h
)

qt_add_resources(GUI_FRECCIA "resources"
    PREFIX "/assets"
    FILES
        assets/logo_xae.png
)

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/Header_Files
    ${CMAKE_CURRENT_SOURCE_DIR}/Header_Files/data
)


set_target_properties(GUI_FRECCIA PROPERTIES
    WIN32_EXECUTABLE TRUE
    MACOSX_BUNDLE TRUE
    MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/apple/Info.cmake.plist"
)

target_link_libraries(GUI_FRECCIA PUBLIC
    Qt::Charts
    Qt::Core
    Qt::Gui
    Qt::Widgets
    Qt::SerialPort
    Qt::DataVisualization
)

install(TARGETS GUI_FRECCIA
    RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
    BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
    LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
)
